welcome.lessons.welcome.variables.Variables.scala.error
Variables:5: error: not found: value NbPas
	nbPas = NbPas + 1;
                ^