welcome.lessons.welcome.variables.Variables.scala.code
var nbPas:Int = 0
while (!estSurBiscuit) {
	avance();
	nbPas = NbPas + 1;
	}
prendBiscuit()
var dejaFait:Int = 0
while (dejaFait != nbPas) {recule()}
poseBiscuit()